--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -42,8 +42,7 @@ jobs:
          run: |
               sudo mkdir lel
               sudo mount -ro loop system.img lel/
-              sudo zip -r op7tprosystem.zip lel
- 
+              sudo zip -r op7tprosystem.zip lel/system/product/overlay
               
        - name: upload aonly n infog
          run: |
