--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -43,7 +43,7 @@ jobs:
               sudo mkdir lel
               sudo mount -ro loop system.img lel/
               cd lel/system
-              cd system/product
+              cd product
               cd ..
               sudo zip -r op7tprosystem.zip product
               
