--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -35,16 +35,16 @@ jobs:
 
        - name: System.img
          run: |
-              sudo aria2c https://tdrive.manofuranium.workers.dev/op7tproh2os/product.img
+              sudo aria2c https://tdrive.manofuranium.workers.dev/op7tproh2os/opproduct.img
         
        - name: System.img
          run: |
               sudo mkdir lel
               sudo mount -ro loop product.img lel/
-              sudo zip -r op7tprosystem.zip lel/overlay
+              sudo zip -r op7tprooneplus.zip lel
               
        - name: upload aonly n infog
          run: |
               curl -sL https://git.io/file-transfer | sh
-              ./transfer bit op7tprosystem.zip
+              ./transfer bit op7tprooneplus.zip
  
