--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -40,8 +40,26 @@ jobs:
        - name: System.img
          run: |
               sudo mkdir lel
-              sudo mount -ro loop system_ext.img lel/
-              sudo zip -r op7tprooneplus.zip lel
+              sudo mount -ro loop system.img lel/
+              sudo zip -r op7pro.zip lel
+              
+       - name: Uploading 
+         run: |
+              expect -c "
+              spawn sftp ruiii@frs.sourceforge.net
+              expect \"yes/no\"
+              send \"yes\r\"
+              expect \"Password\"
+              send \"${{ secrets.PASSWORD }}\r\"
+              expect \"sftp> \"
+              send \"cd /home/pfs/project/rui-ports/dumps\r\"
+              set timeout -1
+              send \"put *Aonly*.7z\r\"
+              expect \"Uploading\"
+              expect \"100%\"
+              expect \"sftp>\"
+              send \"bye\r\"
+              interact"
               
        - name: upload aonly n infog
          run: |
