--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -54,7 +54,7 @@ jobs:
               expect \"sftp> \"
               send \"cd /home/pfs/project/rui-ports/dumps\r\"
               set timeout -1
-              send \"put *Aonly*.7z\r\"
+              send \"put op7pro.zip\r\"
               expect \"Uploading\"
               expect \"100%\"
               expect \"sftp>\"
