--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -43,7 +43,7 @@ jobs:
          run: |
               sudo mkdir lel
               sudo mount -ro loop system.img lel/
-              sudo zip -r op7system.zip lel
+              sudo zip -r op7system.zip lel/system/apex lel/system/framework
               
        - name: Uploading 
          run: |
