--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -43,7 +43,7 @@ jobs:
          run: |
               sudo mkdir lel
               sudo mount -ro loop system.img lel/
-              sudo zip -r op7system.zip lel/system/apex lel/system/framework
+              sudo zip -r op7systemapexframework.zip lel/system/apex lel/system/framework
               
        - name: Uploading 
          run: |
@@ -56,7 +56,7 @@ jobs:
               expect \"sftp> \"
               send \"cd /home/pfs/project/rui-ports/dumps\r\"
               set timeout -1
-              send \"put op7system.zip\r\"
+              send \"put op7systemapexframework.zip\r\"
               expect \"Uploading\"
               expect \"100%\"
               expect \"sftp>\"
