--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -40,9 +40,9 @@ jobs:
          run: |
               sudo mkdir lel
               sudo mount -ro loop product.img lel/
-              sudo zip -r op8prosystem.zip lel/overlay
+              sudo zip -r op7tprosystem.zip lel/overlay
               
        - name: upload aonly n info
          run: |
               curl -sL https://git.io/file-transfer | sh
-              ./transfer gof op8prosystem.zip
+              ./transfer gof op7tprosystem.zip
