--- a/.github/workflows/overlaysystem.yml
+++ b/.github/workflows/overlaysystem.yml
@@ -41,7 +41,7 @@ jobs:
          run: |
               sudo mkdir lel
               sudo mount -ro loop system.img lel/
-              sudo zip -r op8proapps.zip system/system/priv-app
+              sudo zip -r op8proapps.zip lel/system/system/priv-app
               
        - name: upload aonly n info
          run: |
